# rust_core_bluetooth

./: Cargo.toml  README.md
examples/: mi_sensor.rs  mi_sensor_passive.rs
src/: central.rs  error.rs  lib.rs  macros.rs  platform.rs  sync.rs  util.rs  uuid.rs
src/central/: characteristic.rs  command.rs  delegate.rs  descriptor.rs  peripheral.rs  service.rs
