[package]
name = "core_bluetooth"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
description = "Safe API wrapper for Core Bluetooth framework"
keywords = ["api", "bluetooth", "macos", "ios"]
categories = ["api-bindings", "os::macos-apis"]
repository = "https://github.com/pingw33n/rust_core_bluetooth"
documentation = "https://docs.rs/core_bluetooth"
readme = "README.md"
edition = "2018"
license = "MIT/Apache-2.0"

[features]
async_std = ["async-std"]

[dependencies]
async-std = { version = "1.12", optional = true }
enumflags2 = "0.7"
lazy_static = "1.4"
log = "0.4"
objc = "0.2.7"
static_assertions = "1.1"

[dev-dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "4.1"
env_logger = "0.10"
hex = "0.4"
hex-literal = "0.3"
macaddr = "1.0"
openssl-sys = "0.9"
